# Doodle

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example_ideas.md  layout.html  main.py  package_v1.sh  pyproject.toml  requirements.md  setup.py  styles.css  test_features.py  test_features_layout.html  todo.md
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  architecture.md  cheatsheet.md  getting-started.md  layout-and-styling.md  memory-and-performance.md  unused_reference.md
doodle/: __init__.py  __init__.pyi  cli.py
examples/breakout/: layout.html  main.py  styles.css
examples/breakout/shaders/: crt.fs  hit.fs
examples/calculator/: layout.html  main.py  styles.css
examples/pong/: layout.html  main.py  styles.css
examples/timer/: layout.html  main.py  styles.css
src/: cache.c  cache.h  color.c  color.h  css_parser.c  css_parser.h  daudio.c  daudio.h  dom_utils.c  dom_utils.h  dutils.c  dutils.h  engine_shared.h  expose_raylib.c  fast_math.h  html_parser.c  layout.c  layout.h  mparser.c  mparser.h  particles.c  particles.h  profiler.c  raylib.h  renderer.c  renderer.h  setup.py  string_utils.c  string_utils.h  unit.c  unit.h
src/core/: css_parser.c  css_parser.h  expose_raylib.c  html_parser.c  html_parser.h  layout.c  mparser.c  mparser.h  renderer.c
src/utils/: arena.h  cache.c  cache.h  color.h  daudio.c  daudio.h  dom_utils.h  fast_math.h  particles.c  profiler.h  string_utils.h  unit.h
