[project]
name = "doodle"
version = "0.1.0"
description = "Hardware-accelerated DOM-based UI & 2D Game Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["pp*", "*-win32", "*-manylinux_i686"]

[tool.cibuildwheel.windows]
environment = { PATH = "C:\\msys64\\ucrt64\\bin;$PATH", CC = "gcc", CXX = "g++" }
before-all = '''
powershell -Command "Invoke-WebRequest -Uri https://github.com/raysan5/raylib/archive/refs/tags/6.0.zip -OutFile raylib-6.0.zip"
powershell -Command "Expand-Archive -Path raylib-6.0.zip -DestinationPath ."
cd raylib-6.0
cmake -G Ninja -B build -DBUILD_SHARED_LIBS=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=C:\raylib
cmake --build build --target install --config Release
'''


