[project]
name = "doodle-ui"
version = "0.1.0"
description = "Hardware-accelerated DOM-based UI & 2D Game Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["pp*", "*-win32", "*-manylinux_i686"]

[tool.cibuildwheel.linux]
before-all = """
if command -v yum >/dev/null 2>&1; then
    yum install -y libX11-devel libXcursor-devel libXrandr-devel libXinerama-devel libXi-devel mesa-libGL-devel alsa-lib-devel cmake
elif command -v apt-get >/dev/null 2>&1; then
    apt-get update && apt-get install -y libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libgl1-mesa-dev libasound2-dev cmake
elif command -v apk >/dev/null 2>&1; then
    apk add libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev mesa-dev alsa-lib-dev cmake
else
    echo "No supported package manager found" && exit 1
fi && \
curl -L -o raylib-6.0.tar.gz https://github.com/raysan5/raylib/archive/refs/tags/6.0.tar.gz && \
tar -xzf raylib-6.0.tar.gz && \
cd raylib-6.0 && \
cmake -B build -DBUILD_SHARED_LIBS=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DCMAKE_C_FLAGS="-D_GNU_SOURCE" && \
cmake --build build --target install --config Release
"""
